--- a/demo/index.html
+++ b/demo/index.html
@@ -3,8 +3,7 @@
 <head>
 	<title>MrMonkey Sample</title>
 	<meta charset="utf-8">
-	<script src="ckeditor.js"></script>
-	<link href="sample.css" rel="stylesheet">
+	<script src="https://raw.github.com/anttileppa/ck-mrmonkey/master/demo/ckeditor.js"></script>
 </head>
 <body>
   <h1>MrMonkey Sample</h1>
