** Changed ckeditor.js url back to relative in demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>MrMonkey Sample</title>
 	<meta charset="utf-8">
-	<script src="https://raw.github.com/anttileppa/ck-mrmonkey/master/demo/ckeditor.js"></script>
+	<script src="ckeditor.js"></script>
 </head>
 <body>
   <h1>MrMonkey Sample</h1>
